Add repository metadata for eWeLink MQTT Bridge

--- a/repository.yaml
+++ b/repository.yaml
@@ -1,1 +1,3 @@
-
+name: "eWeLink Home Assistant MQTT Bridge"
+url: "https://github.com/PKHarsimran/ewelink-home-assistant-mqtt-bridge"
+maintainer: "Harsimran"
